--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,1 +1,13 @@
-<p>contact-form works!</p>
+<form class="form">
+    <h4 class="text-center text-primary">Contact Us</h4>
+    <div class="form-group">
+        <label for="firstName" class="">Firt Name</label>
+        <input type="text" id="firstName" #firstName (keyup)="onFirstNameChange(firstName)" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label for="comment" class="">Comment</label>
+        <textarea name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
