--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -2,7 +2,7 @@
     <h1>Welcome to the Users Table now we have {{ students.length }}</h1>
 
     <table class="table table-striped">
-        <thead>
+        <thead class="bg-primary text-white">
             <tr>
                 <th>ID</th>
                 <th>Name</th>
