--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <h1>Welcome to the Users Table now we have {{ students.length }}</h1>
+    <h1 class="mb-5">
+        Welcome to the Users Table now we have {{ students.length }}
+    </h1>
 
     <table class="table table-striped">
         <thead class="bg-primary text-white">
