--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <app-navbar></app-navbar>
     <app-students></app-students>
     <contact-form></contact-form>
 </div>
