--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,30 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button " data-bs-toggle="collapse " data-bs-target="#navbarTogglerDemo01 " aria-controls="navbarTogglerDemo01 " aria-expanded="false " aria-label="Toggle navigation ">
       <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">GameOff</a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01 ">
+            <a class="navbar-brand" href="# ">GameOff</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page " href="# ">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Users</a>
+                    <a class="nav-link" href="# ">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a
+                    <a class="nav-link" href="# " tabindex="-1 " aria-disabled="true ">Contact</a
           >
         </li>
       </ul>
       <form class="d-flex">
         <input
           class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
+          type="search "
+          placeholder="Search "
+          aria-label="Search "
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success text-white" type="submit ">
+          Search
+        </button>
       </form>
     </div>
   </div>
