Update project traget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <app-navbar></app-navbar>
+    <app-homepage></app-homepage>
     <app-students></app-students>
     <contact-form></contact-form>
 </div>
