--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,1 +1,8 @@
-<p>homepage works!</p>
+<!-- <section id="hero">
+    <div class="hero-container">
+        <h3>Welcome to <strong>Tempo</strong></h3>
+        <h1>We're Creative Agency</h1>
+        <h2>We are team of talented designers making websites with Bootstrap</h2>
+        <a href="#" class="btn-get-started scrollto">Get Started</a>
+    </div>
+</section> -->
